--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "express": "~4.17.1",
     "http-errors": "~1.8.0",
     "jsonwebtoken": "~8.5.1",
-    "mongoose": "~5.13.7",
+    "mongoose": "^6.0.0",
     "morgan": "~1.10.0",
     "nodemailer": "~6.6.3",
     "validator": "~13.6.0"
@@ -28,13 +28,13 @@
     "@types/express": "~4.17.13",
     "@types/http-errors": "~1.8.1",
     "@types/jsonwebtoken": "~8.5.5",
-    "@types/mongoose": "~5.11.97",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "~1.9.3",
     "@types/node": "14",
-    "@types/nodemailer": "~6.4.4",
-    "@types/validator": "~13.6.3",
     "@types/node-fetch": "~2.5.12",
+    "@types/nodemailer": "~6.4.4",
     "@types/request": "~2.48.7",
+    "@types/validator": "~13.6.3",
     "@typescript-eslint/eslint-plugin": "~4.29.1",
     "@typescript-eslint/parser": "~4.29.1",
     "eslint": "~7.32.0",
