--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "express": "~4.17.1",
     "http-errors": "~1.8.0",
     "jsonwebtoken": "~8.5.1",
-    "mongoose": "5.8.0",
+    "mongoose": "~5.13.7",
     "morgan": "~1.10.0",
     "nodemailer": "~6.6.3",
     "validator": "~13.6.0"
