--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "start-dev": "nodemon ./bin/www",
     "build": "tsc"
   },
   "dependencies": {
@@ -41,7 +42,7 @@
     "eslint": "~7.32.0",
     "eslint-config-prettier": "~8.3.0",
     "node-fetch": "~2.6.1",
-    "nodemon": "~2.0.12",
+    "nodemon": "^2.0.12",
     "prettier": "~2.3.2",
     "request": "~2.88.2",
     "ts-node": "~10.2.1",
